--- a/src/Makefile
+++ b/src/Makefile
@@ -8,21 +8,23 @@ COMPILATION_FLAGS = -O1
 #    gfortran, ifort
 COMPILER = ifort
 #    -fopenmp, -openmp, (blank for debug)  
-OMP_FLAG = -openmp
+OMP_FLAG = 
 EXE_DIR = ../$(EXECUTION)/
 SOURCES = \
 $(wildcard ./*/*.f90)
 # Other variables
-MAIN_FILE_ROOT = ./Sea_current_Pmy_ITA_mapping
+MAIN_FILE_ROOT = ./Main/Sea_current_Pmy_ITA_mapping
 CODE = $(EXE_DIR)Sea_current_Pmy_ITA_mapping_v_$(VERSION)_$(COMPILER)_$(EXECUTION)
 OBJECTS = $(patsubst %.f90,%.o,$(SOURCES))
 # Targets
 #    Correct sequence for compile+link:
 #       make touch
 #       make 
-all: compile link remove 
-#    "compiling" cannot be launched together with "touching" as ".o" files
-#    would not be available yet
+all: compile_main 
+compile_main:
+	touch $(CODE).x
+	$(COMPILER) $(MAIN_FILE_ROOT).f90 -o $(CODE).x $(OMP_FLAG) $(COMPILATION_FLAGS)
+	rm -f $(MAIN_FILE_ROOT).o
 compile: $(SOURCES)
 %.f90: %.o
 	$(COMPILER) $@ -o $< $(OMP_FLAG) $(COMPILATION_FLAGS) -c 
